# GameCodingComplete

./: .gitignore  CMakeLists.txt  README.md  init.bat  manifest  repositories.manifest
KCEngine/: .gitignore  KCEngine.cxx  buildfile
debug_assert_config/: CMakeLists.txt.in
engine/include/engine/: engine.hpp
engine/include/file_load_system/: async_file_load.hpp  file_load_system.hpp  smart_file.hpp  specification.md
engine/include/locale_handling/: locale_handling.hpp  specification.md
engine/include/os_detection/: os_detection.hpp  specification.md  windows.hpp
engine/include/serialization/: json_serializer.hpp  serializer.hpp
engine/include/utils/: engine_assert.hpp  logger.hpp  stopwatch.hpp
engine/src/: main.cpp
engine/src/engine/: engine.cpp
engine/src/file_load_system/: async_file_load.cpp  file_load_system.cpp
engine/src/locale_handling/: locale_handling.cpp
engine/src/serialization/: json_serializer.cpp
engine/src/test/: class_test.cpp
engine/src/utils/: engine_assert.cpp  logger.cpp
engine/test_src/: test_main.cpp
engine/test_src/serialization/: test_serialization.cpp
gtest_config/: CMakeLists.txt.in
include/test/: class_test.hpp
src/: main.cpp
